tests-system/rbt-valid-base-names/output
Bar.T kitten {
    ^ rbt-valid-base-names/foo.trlc:8: error: unknown symbol T
Processed 2 models, 0 checks and 1 requirement file and found 1 error
